2008-08-08  Mark Wielaard  <mwielaard@redhat.com>

	* examples-index-gen.pl (add_meta_txt): Don't output output, exits,
	status line.
	(add_meta_html): Likewise.
	* *index.html: Regenerated.
	* *index.txt: Likewise.

2008-08-08  Mark Wielaard  <mwielaard@redhat.com>

	* examples-index-gen.pl (inputdir): Make absolute.
	(outputdir): Likewise.
	(supportfiles): Copy from new html dir. Add README. Make sure
	new html subdir is created in outputdir.

2008-08-07  Frank Ch. Eigler  <fche@elastic.org>

	* *index.txt, *index.html: New generated files.
	* .gitignore: Zap it.
	* html/*, examples-index-gen.pl: Adapt to html/ boilerplate subdir.

2008-08-07  Frank Ch. Eigler  <fche@elastic.org>

	* small_demos: Unique parts kept, others dropped.
	* all other samples: Moved into new subdirectories.

2008-08-07  David Smith  <dsmith@redhat.com>

	* .gitignore: New file.

2008-08-07  Mark Wielaard  <mwielaard@redhat.com>

	* examples-index-gen.pl: New file.
	* systemtap.css: Likewise.
	* systemtapcorner.gif: Likewise.
	* systemtaplogo.png: Likewise.
	* html_footer.tmpl: Likewise.
	* html_header.tmpl: Likewise.
	* Makefile.am (EXTRA_DIST): Add new support files.

2008-08-07  Mark Wielaard  <mwielaard@redhat.com>

	* futexes.meta: Correct name: entry.

2008-08-01  William Cohen  <wcohen@redhat.com>

	* helloworld.meta, traceio2.meta: Tweak test_installcheck.
	
2008-08-01  William Cohen  <wcohen@redhat.com>	

	* check.exp: Run both tests for installcheck tests.
	
2008-07-11  Mark Wielaard  <mwielaard@redhat.com>

	* traceio.meta: s/decending/descending/ in description.
	* iotop.meta: Likewise.

2008-07-02  William Cohen  <wcohen@redhat.com>

	* functioncallcount.meta, functioncallcount.stp: New.

2008-07-02  William Cohen  <wcohen@redhat.com>

	* para-callgraph.stp, para-callgraph.meta: New.

2008-06-20  William Cohen  <wcohen@redhat.com>

	* traceio2.meta: Correct test_check and test_installcheck commands.
	
2008-06-20  William Cohen  <wcohen@redhat.com>
